# simplex-chat-py

./: .gitignore  PR_DESCRIPTION.md  README.md  pyproject.toml
examples/: ai_bot.py  echo_bot.py  moderation_bot.py
simplex_chat/: __init__.py  bot.py  client.py
tests/: test_client.py
